# rusty-ants

./: Cargo.toml  LICENSE_MIT  README.md  index.html  netlify.toml
demo/: jsconfig.json  main.js  styles.css  worker.js
demo-scripts/: main.js  worker.js
src/: cities.rs  cycle.rs  edges.rs  instance.rs  lib.rs  parameters.rs  universe.rs
