[package]
name = "rusty-ants"
version = "0.1.0"
authors = ["cmarchal"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.51"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.126", features = ["derive"] }
serde-wasm-bindgen = "0.3.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
codegen-units = 1