[package]
name = "rusty-tsp"
version = "0.1.0"
authors = ["carlos.marchal@pm.me"]
edition = "2018"
description = "A WebAssembly TSP solver using 2-opt"
repository = "https://github.com/carlos-marchal/rusty-tsp"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.51"
serde = { version = "1.0.126", features = ["derive"] }
serde-wasm-bindgen = "0.3.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1